--- a/optimization/optimization.tex
+++ b/optimization/optimization.tex
@@ -7,7 +7,9 @@
 
 The performance status before optimizations is given in the "before*.html" files. It's immediately visible that the first thing that needs to be optimized is caching.
 
-First I configured "apache" to give long "Expires" headers with the static files. The problem was that google login scripts had short expiry that was out of my control. In order to deal with that, I segregated all google authentication functionality to the "/login" and "/logout" pages.
+First I configured "apache" to give long "Expires" headers with the static files. The problem was that google login scripts had short expiry that was out of my control. In order to deal with that, I segregated all google authentication functionality to the "/login" and "/logout" pages. As a result, all static files in the index and problemset pages are now cached, while caching files in login and logout pages probably doesn't matter as much.
+
+The result is given in the "after*.html" files. There was a noticable speedup of 0.2s on the median run.
 
 \end{document}
 
